k8s/K8s_codes_practice/ingress/nginx-ingress.yml
#Ingress controls external HTTP/HTTPS traffic to services inside the cluster.
#It acts like a smart router / gateway
# Problem without Ingress:
# Each service needs:
# NodePort ❌ OR
# LoadBalancer ❌
# → Too many ports/IPs
# 👉 Solution:

# One entry point ✅
# Multiple services routing ✅

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-ingress

spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
